# mdfstools

./: .clang-format  CMakeLists.txt  LICENSE
include/common/: align.hpp  block_device.hpp  crc32.hpp  djb2.hpp  gpt.hpp  guid.hpp  mbr.hpp  result.hpp  units.hpp
include/part/: init_table.hpp  initpart.hpp  licenses.hpp  run_info.hpp
src/: guid_to_arr.cpp  partinit.cpp
src/common/: crc32.cpp  gpt.cpp  guid.cpp  mbr.cpp  protective_mbr.asm
src/part/: init_table.cpp  initpart.cpp  main.cpp  part.cpp
